Cleaned complete codebase

--- a/ERSpythonreason.html
+++ b/ERSpythonreason.html
@@ -4,29 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NO</title>
+    <title>Employee Recruitment System in Python</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <style>
-        .content{
-            width: fit-content;
-            height: fit-content;
-            margin: auto;
-            border-style: inset;
-            border-width: 3px;
-            border-color: lightgrey;
-            padding: 14px;
+        body {
+            background: linear-gradient(135deg, #e0e7ff 0%, #f8fafc 100%);
+            font-family: 'Roboto', Arial, sans-serif;
+            margin: 0;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
-        .anc{
+        .content {
+            background: #fff;
+            border-radius: 16px;
+            box-shadow: 0 4px 24px rgba(0,0,0,0.08);
+            border: 1px solid #e5e7eb;
+            padding: 32px 28px;
+            max-width: 400px;
+            text-align: center;
+        }
+        h2 {
+            color: #1e293b;
+            margin-bottom: 18px;
+            font-size: 1.5rem;
+            font-weight: 700;
+        }
+        p {
+            color: #334155;
+            margin-bottom: 16px;
+            font-size: 1rem;
+        }
+        .anc {
+            display: inline-block;
             text-decoration: none;
-            background-color: black;
-            color: white;
+            background: linear-gradient(90deg, #6366f1 0%, #3b82f6 100%);
+            color: #fff;
+            font-weight: 500;
+            padding: 10px 22px;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(99,102,241,0.08);
+            transition: background 0.2s, transform 0.2s;
+            margin-top: 8px;
+        }
+        .anc:hover {
+            background: linear-gradient(90deg, #3b82f6 0%, #6366f1 100%);
+            transform: translateY(-2px) scale(1.04);
         }
     </style>
 </head>
 <body>
     <div class="content">
         <h2>Employee Recruitment System in Python</h2>
-        <p>As this is a python project this cannot be published.</p><p>So, I suggest you go through the repository and execute the code in your lab by downloading it from my repository.</p>
-        <p>For Repository, you can check out <a href="https://github.com/Shashank-mankala1/Employee-Recruitment-System-Python" target="_blank" class="anc">this link</a></p>
+        <p>This is a Python project and cannot be published directly online.</p>
+        <p>You can review the repository and run the code in your lab by downloading it from my GitHub.</p>
+        <a href="https://github.com/Shashank-mankala1/Employee-Recruitment-System-Python" target="_blank" class="anc">View Repository</a>
     </div>
 </body>
 </html>
