--- a/fbreason.html
+++ b/fbreason.html
@@ -5,26 +5,59 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I Apologize...</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <style>
-        .content{
-            width: fit-content;
-            height: fit-content;
-            margin: auto;
-            border-style: inset;
-            border-width: 3px;
-            border-color: lightgrey;
-            padding: 14px;
+        body {
+            background: linear-gradient(135deg, #f8fafc 0%, #e2e8f0 100%);
+            font-family: 'Roboto', Arial, sans-serif;
+            margin: 0;
+            min-height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
-        .anc{
+        .content {
+            background: #fff;
+            border-radius: 12px;
+            box-shadow: 0 4px 24px rgba(0,0,0,0.08);
+            border: 1px solid #e2e8f0;
+            padding: 32px 28px;
+            max-width: 420px;
+            width: 100%;
+            text-align: center;
+        }
+        h2 {
+            color: #1e293b;
+            font-size: 1.5rem;
+            margin-bottom: 18px;
+            font-weight: 700;
+        }
+        p {
+            color: #334155;
+            font-size: 1rem;
+            margin: 12px 0;
+        }
+        .anc {
+            display: inline-block;
             text-decoration: none;
-            background-color: black;
-            color: white;
+            background: linear-gradient(90deg, #2563eb 0%, #1e40af 100%);
+            color: #fff;
+            padding: 10px 22px;
+            border-radius: 6px;
+            font-weight: 500;
+            transition: background 0.2s, box-shadow 0.2s;
+            box-shadow: 0 2px 8px rgba(37,99,235,0.08);
+            margin-top: 10px;
+        }
+        .anc:hover {
+            background: linear-gradient(90deg, #1e40af 0%, #2563eb 100%);
+            box-shadow: 0 4px 16px rgba(37,99,235,0.15);
         }
     </style>
 </head>
 <body>
     <div class="content">
-        <h2>As per the Terms and Conditions of GitHub </h2>
+        <h2>As per the Terms and Conditions of GitHub</h2>
         <p>We cannot upload a cloned site to their pages. So, I will be publishing this website soon on another domain and updating it ASAP.</p>
         <p>Your understanding is greatly appreciated!</p>
         <p>For Repository, you can check out <a target="_blank" href="https://github.com/Shashank-mankala1/facebookselfchallenge" class="anc">this link</a></p>
