--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="twitter:image" content="https://img.freepik.com/vektoren-premium/portfolio-wort-mit-bleistift-statt-buchstabe-i-kunst-und-designgalerie-konzept-vektorkonzeptionelles-kreatives-logo-oder-poster-mit-spezieller-schriftart_570429-3743.jpg?w=2000">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="img/mylogo1.png">
+    <link rel="icon" type="image/png" href="img/mylogo.png">
 
     <!-- Sitemap (optional but useful if created) -->
     <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
@@ -72,7 +72,7 @@
             <div class="leftpoletopdiv">
                 <div class="leftpoletopsec">
                     <div class="leftpoletopimg">
-                        <img src="img/mylogo1.png" alt="Shashank Mankala Logo" onclick="location.href='#topp'" ;>
+                        <img src="img/mylogo.png" alt="Shashank Mankala Logo" onclick="location.href='#topp'" ;>
                     </div>
                     <div class="hamburger" id="hamburger">
                         <i class="fas fa-bars"></i>
@@ -136,7 +136,6 @@
         <div class="lefttab darkmodebg leftbar" id="lefttab">
             <a href="#topp" class="navlink" data-target="">
                 <div class="nametitle darkmodebg" id="nametitle">
-                    <!--onclick topp-->
                     <h1 class="inthemef">Shashank</h1>
                     <h1 class="inthemef">Mankala</h1>
                     <p class="darkmodefont" style="color: black;">Data Scientist</p>
@@ -188,7 +187,6 @@
                     <div class="awards navdiv" id="lawards">
                         <div class="navicon inthemef">
                             <i class="fas fa-medal"></i>
-                            <!-- <i class="fas fa-trophy"></i> -->
                         </div>
                         <div class="navtitle darkmodefont">
                             <p>Achievements/</p>
@@ -381,8 +379,7 @@
                     <div class="abouttxt">
                         <p>
                             <i class="far fa-dot-circle inthemef"></i> &nbsp; I'm a
-                            passionate Data Scientist currently pursuing my Master's in Data
-                            Science at SUNY Buffalo, with a strong foundation in machine
+                            passionate Data Scientist and a Data Science graduate student, with a strong foundation in machine
                             learning, data engineering, and cloud-based deployment. With
                             hands-on experience as a Lead Data Analyst at Shadowfax and a
                             Software Engineer Intern at Frugal Testing, I specialize in
@@ -685,9 +682,6 @@
                             </div>
                         </div>
 
-
-
-
                         <!-- pr Road accidents dashboard -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn3">
                             <div class="pryear inthemeb" id="pryearn3">2023</div>
@@ -737,10 +731,6 @@
                                 </div>
                             </div>
                         </div>
-
-
-
-
 
                         <!-- pr easychat website -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn2">
@@ -867,9 +857,6 @@
                                 </div>
                                 <hr>
                                 <div class="prdeffooter">
-                                    <!-- <div class="prdeffooterdiv inthemeb darkmodeshadow" id="viewprojectn0" title="View project">
-                                        <i class="fas fa-external-link-alt"></i>
-                                    </div> -->
                                     <div class="prdeffooterdiv inthemeb darkmodeshadow"
                                         onclick="viewproject('REPO_PLAYSTORE')" title="View GitHub repository">
                                         <i class="fab fa-github"></i>
@@ -1105,7 +1092,6 @@
                 </div>
                 <div class="skillscontainer darkmodefont">
                     <div class="skillscontent darkmodebg darkmodefont darkmodeshadow">
-                        <!-- Skill Section Template -->
                         <template id="skill-section-template">
                             <div class="typeheading">
                                 <p></p>
@@ -1113,7 +1099,7 @@
                             <hr>
                             <div class="skillcards"></div>
                         </template>
-                        <!-- Skill Card Template -->
+                        
                         <template id="skill-card-template">
                             <div class="skillname">
                                 <div class="skillimg">
@@ -1181,7 +1167,6 @@
                             </div>
                         </div>
 
-                        <!--  -->
                         <div class="expercards darkmodeshadow">
                             <div class="experdefine inthemeb ">
                                 <p><b><i class="fas fa-briefcase"></i> &nbsp; Experience</b></p>
@@ -1335,7 +1320,6 @@
                 </div>
                 <div class="awardscontainer">
                     <div class="awardscontent">
-                        <!-- Award Card Template -->
                         <template id="award-card-template">
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
@@ -1358,7 +1342,7 @@
                     <div class="contactsubcontainer darkmodefont">
                         <div class="contactheaddiv">
                             <div class="contactlogo">
-                                <img src="img/mylogo1.png" alt="lOgO">
+                                <img src="img/mylogo2.png" alt="lOgO">
                             </div>
                             <div class="contactmyname">
                                 <h1>Shashank Mankala</h1>
