--- a/index.html
+++ b/index.html
@@ -824,7 +824,7 @@
                             </div>
                         </div>
                         <!-- pr excel project -->
-                        <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn0">
+                        <!-- <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn0">
                             <div class="pryear inthemeb" id="pryearn0">2022</div>
                             <div class="prsonoff" id="prsonoffn0">
                                 <div class="prgif" id="prgifn0">
@@ -863,9 +863,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- ============= -->
-                        <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs1">
+                        <!-- <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs1">
                             <div class="pryear inthemeb" id="pryear1">2021</div>
                             <div class="prsonoff" id="prsonoff1">
                                 <div class="prgif" id="prgif1">
@@ -1037,8 +1037,8 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs6">
+                        </div> -->
+                        <!-- <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs6">
                             <div class="pryear inthemeb" id="pryear6">2021</div>
                             <div class="prsonoff" id="prsonoff6">
                                 <div class="prgif" id="prgif6">
@@ -1081,7 +1081,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
