Added New Experience

--- a/index.html
+++ b/index.html
@@ -1120,8 +1120,41 @@
                     <p>EXPERIENCE & EDUCATION</p>
                 </div>
                 <div class="expercontainer   darkmodefont">
-                    <div class="experallcards">
 
+                    <div class="experallcards">
+                        <div class="expercards darkmodeshadow">
+                            <div class="experdefine inthemeb ">
+                                <p><b><i class="fas fa-briefcase"></i> &nbsp; Experience</b></p>
+                            </div>
+                            <div class="expercardheadbody darkmodebg darkmodefont">
+                                <div class="expercardhead">
+                                    <div class="expercardlogo" onclick="pageOpen('nec')">
+                                        <img src="img/nec.png" alt="neweracap">
+                                    </div>
+                                    <div class="expercardtitle inthemef" onclick="pageOpen('nec')">
+                                        <p> New Era Cap</p>
+                                    </div>
+                                    <div class="expercardrole darkmodefont">
+                                        <p>Data Scientist Intern</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="expercardbody">
+                                    <p id="expercardintro"> </p>
+                                    <em>
+                                        <ul>
+                                            <li>Built end-to-end demand-forecasting pipeline (Snowflake, Python, feature engineering, LightGBM) and deployed models with Azure and exposed results via Streamlit dashboard for supply planners</li>
+                                            <li>Automated vendor capacity & purchase buy planning by implementing allocation logic and retraining pipelines, eliminating manual Excel consolidation and making forecasts auditable and scalable.</li>
+                                            <li>Collaborated with supply-chain, sourcing and engineering to design data schema, implement ETL, validate models and produce stakeholder documentation.</li> 
+                                        </ul>
+                                    </em>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="expercardfooter darkmodebg darkmodefont">
+                                <p>Aug'25 - Present | Buffalo, United States</p>
+                            </div>
+                        </div>
                         <div class="expercards darkmodeshadow">
                             <div class="experdefine inthemeb ">
                                 <p><b><i class="fas fa-user-graduate"></i> &nbsp; Education</b></p>
@@ -1180,7 +1213,7 @@
                                         <p> SHADOWFAX</p>
                                     </div>
                                     <div class="expercardrole darkmodefont">
-                                        <p>Lead - Data Analytics</p>
+                                        <p>Lead - Data Analyst</p>
                                     </div>
                                 </div>
                                 <hr>
@@ -1415,7 +1448,7 @@
                         </div>
                     </div>
                     <div class="contactfooter">
-                        <p>&copy; 2025 | All rights reserved with Copyright & Trademarks | Made by Shashank</p>
+                        <p>&copy; 2021-2025 | All rights reserved with Copyright & Trademarks | Made by Shashank</p>
                     </div>
                 </div>
             </section>
