Added new project

--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 </head>
 
 <body>
+    <!-- <div id="popup">
+  <div class="inthemeb"  onclick="redirectToCurrentSection()">Jump to <strong>"Current section"</strong> 👇</div>
+</div> -->
     <div class="fullpage">
         <div class="overlayfull" id="overlayfull"></div>
         <div class="leftpole leftbar">
@@ -406,6 +409,45 @@
                 </div>
                 <div class="prcontainer  darkmodefont">
                     <div class="prcontent">
+                        <!-- LLM Inference Engine  -->
+                        <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn8">
+                            <div class="pryear inthemeb" id="pryearn8">2025</div>
+                            <div class="prsonoff" id="prsonoffn8">
+                                <div class="prgif" id="prgifn8">
+                                    <img src="img/llminferenceengine.png" alt="llminferenceengine.png" class="prgifgif"
+                                        id="prgifgifn8">
+                                </div>
+                                <div class="prtitle inthemef" id="prtitlen8">
+                                    <p id="prpn8">High-Performance LLM Inference Engine with Grammar-Constrained Decoding </p>
+                                    <div class="proptions" id="proptionn8">
+                                        <i class="fas fa-ellipsis-v"></i>
+                                    </div>
+                                </div>
+                                <div class="prdisc">
+                                    <p>Built a local LLM inference engine implementing and enabling deterministic and grammar-constrained text generation through token masking and incremental parsing.</p>
+                                </div>
+                            </div>
+                            <div class="prshidonoff darkmodebg darkmodefont" id="prshidonoffn8">
+                                <div class="prdefhead">
+                                    <p>Accomplishments</p>
+                                    <i class="fas fa-times" id="closeoptn8"></i>
+                                </div>
+                                <div class="prdefbody">
+                                    <ul>
+                                        <li>
+                                            <p>Built a local LLM inference engine implementing the complete logits generation, sampling, and decoding loop, supporting greedy and probabilistic decoding using temperature, top-k, and top-p, and enabling deterministic and grammar-constrained text generation through token masking and incremental parsing</p>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <hr>
+                                <div class="prdeffooter">
+                                    <div class="prdeffooterdiv inthemeb darkmodeshadow"
+                                        onclick="viewproject('REPO_LLM_INFERENCE_ENGINE')" title="View GitHub repository">
+                                        <i class="fab fa-github"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <!-- TutorMind -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn8">
                             <div class="pryear inthemeb" id="pryearn8">2025</div>
